--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/eleftherios-triantafyllidis/"
+  linkedin         : "eleftherios-triantafyllidis"
   orcid            : "https://orcid.org/0000-0001-7578-4290"
   pinterest        :
   soundcloud       :
