--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Eleftherios Triantafyllidis"
 title_separator          : "-"
 name                     : &name "Eleftherios Triantafyllidis"
-description              : &description "PhD Student, The University of Edinburgh"
+description              : &description "PhD Graduate, The University of Edinburgh"
 url                      : https://etriantafyllidis.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "etriantafyllidis/etriantafyllidis.github.io"
