--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Eleftherios Triantafyllidis"
 title_separator          : "-"
 name                     : &name "Eleftherios Triantafyllidis"
 description              : &description "PhD Graduate, The University of Edinburgh"
-url                      : https://etriantafyllidis.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://etriantafyllidis.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "etriantafyllidis/etriantafyllidis.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
