--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Dr. Eleftherios Triantafyllidis"
   avatar           : "profile.png"
-  bio              : "PhD in Bio-Inspired Robotic Learning with Human Factors (VR/MR)"
-  location         : "Edinburgh, UK"
+  bio              : "Researcher at ETH Zurich. PhD in Bio-Inspired AI for Robotic Learning with Human Factors (XR)"
+  location         : "Zurich, Switzerland"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=xUoSvYsAAAAJ&hl=en"
