--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Eleftherios Triantafyllidis"
   avatar           : "profile.png"
-  bio              : "Researcher at ETH Zurich. PhD in Bio-Inspired AI for Robotic Learning with Human Factors (XR)"
+  bio              : "Researcher at ETH Zurich. PhD in Bio-Inspired AI for Robotics and Human Factors (XR)"
   location         : "Zurich, Switzerland"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
