--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Eleftherios Triantafyllidis"
-  avatar           : "profile.png"
-  bio              : "Researcher at ETH Zurich. PhD in Bio-Inspired AI for Robotics and Human Factors (XR)"
+  avatar           : "profile.jpeg"
+  bio              : "Researcher (Technical Lead) at ETH Zurich. PhD in Bio-Inspired AI for Robotics and Human Factors (XR)"
   location         : "Zurich, Switzerland"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
