--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr. Eleftherios Triantafyllidis"
   avatar           : "profile.jpeg"
-  bio              : "Researcher (Technical Lead) at ETH Zurich. PhD in Bio-Inspired AI for Robotics and Human Factors (XR)"
+  bio              : "Researcher (Technical Lead) at ETH Zurich. PhD in Neurobiological-Inspired AI for Embodied Intelligence"
   location         : "Zurich, Switzerland"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
